manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: priskalkulator-dev
  labels:
    name: priskalkulator-dev
